--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "timeZone": "Asia/Jakarta",
   "language": "en",
-  "ownerNumber": ["6285163651710", "558188263143", "6281311850715"],
+  "ownerNumber": ["354076116118961"],
   "readStatus": false,
   "readMessage": false,
   "antiCall": {
@@ -9,19 +9,19 @@
     "block": false,
     "ban": false
   },
-  "prefix": "!#.",
-  "name": "𝙷ɪɢᴀꜱʜɪʏᴀᴍᴀ 𝙺ᴏʙᴇɴɪ",
-  "footer": "arugaz/whatsapp-bot",
+  "prefix": ".",
+  "name": "Stella/Payunga",
+  "footer": "PayungaOficial",
   "self": true,
   "user": {
     "basic": {
       "limit": 30
     },
-    "premium": {
+    "premium": {"913852804", "901414053"}
       "limit": 300,
       "expires": 30
     },
-    "vip": {
+    "vip": {"958982599"}
       "limit": 3000,
       "expires": 30
     }
